apps/base/grafana-operator/grafana/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-external
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - grafana.j6n.dev
  rules:
  - backendRefs:
    - name: grafana-service
      port: 80
